Fix grid gaps.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,7 +13,8 @@ $breakpoint-tablet: 768px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  // align-items?
+  // align-items: center;
 
   @media (min-width: $breakpoint-tablet) {
     padding: 4rem 5rem;
