--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,12 +27,12 @@ a {
 }
 
 .work-area-card {
-  margin-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   width: 80%;
+  height: 100%;
 }
 
 .work-area-card > h3,
@@ -43,15 +43,24 @@ a {
 
 .work-area-card > svg {
   color: #a12027;
+  flex-shrink: 0;
+  flex-grow: 0;
+  // flex: 0;
 }
 
 .work-area-right-arrow {
   color: #a12027;
 }
 
+.work-area-bottom {
+  width: 80%;
+  margin-top: auto;
+}
+
 $breakpoint-tablet: 768px;
 
 .work-areas-grid {
+  row-gap: 40px;
   display: grid;
   place-items: center;
   grid-template-columns: repeat(1, 1fr);
